PIC build is now default because of so libs
- introduce sundown-obj taget
- remove targets sundown-static, sundow-pic and related aliases

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,30 +10,22 @@ set(Sundown_SOURCES
     src/stack.c
     )
 
-add_library(sundown ${Sundown_SOURCES})
-add_library(sundown-pic STATIC ${Sundown_SOURCES})
-add_library(sundown-static STATIC ${Sundown_SOURCES})
-set_property(TARGET sundown-pic PROPERTY POSITION_INDEPENDENT_CODE 1)
+add_library(sundown-obj OBJECT ${Sundown_SOURCES})
+add_library(sundown STATIC $<TARGET_OBJECTS:sundown-obj>)
+set_property(TARGET sundown-obj PROPERTY POSITION_INDEPENDENT_CODE 1)
 
-target_include_directories(sundown PUBLIC
+target_include_directories(sundown-obj PUBLIC
     $<BUILD_INTERFACE:${Sundown_BINARY_DIR}/src>
     $<BUILD_INTERFACE:${Sundown_SOURCE_DIR}/src>
     $<INSTALL_INTERFACE:src>
     )
 
-target_include_directories(sundown-pic PUBLIC
-    $<BUILD_INTERFACE:${Sundown_BINARY_DIR}/src>
-    $<BUILD_INTERFACE:${Sundown_SOURCE_DIR}/src>
-    $<INSTALL_INTERFACE:src>
+target_link_libraries(sundown
+    PUBLIC
+    sundown-obj
     )
 
-target_include_directories(sundown-static PUBLIC
-    $<BUILD_INTERFACE:${Sundown_BINARY_DIR}/src>
-    $<BUILD_INTERFACE:${Sundown_SOURCE_DIR}/src>
-    $<INSTALL_INTERFACE:src>
-    )
-
-install(TARGETS sundown sundown-static sundown-pic EXPORT sundown-targets
+install(TARGETS sundown-obj sundown EXPORT sundown-targets
     LIBRARY DESTINATION lib
     ARCHIVE DESTINATION lib
     RUNTIME DESTINATION bin
@@ -52,6 +44,7 @@ write_basic_package_version_file("SundownConfigVersion.cmake"
     VERSION ${Sundown_VERSION}
     COMPATIBILITY SameMajorVersion
     )
+
 install(FILES
     "SundownConfig.cmake"
     "${CMAKE_CURRENT_BINARY_DIR}/SundownConfigVersion.cmake"
@@ -59,5 +52,3 @@ install(FILES
     )
 
 add_library(Apiary::sundown ALIAS sundown)
-add_library(Apiary::sundown-static ALIAS sundown-static)
-add_library(Apiary::sundown-pic ALIAS sundown-pic)
